@@ -1,6 +1,7 @@
 Revision history for IPC::SRLock
 
 0.6
+        - Switched to Storable::nfreeze to be like Ovid
         - Added subroutine names to stack trace
         - Updated exception handling class
         - Fixed error handling in Sysv subclass
